--- a/05-Object Oriented Programming/05-OOP Challenge - Solution.ipynb
+++ b/05-Object Oriented Programming/05-OOP Challenge - Solution.ipynb
@@ -28,18 +28,18 @@
    "outputs": [],
    "source": [
     "class Account:\n",
-    "    def __init__(self,owner,balance=0):\n",
+    "    def __init__(self, owner, balance=0):\n",
     "        self.owner = owner\n",
     "        self.balance = balance\n",
-    "        \n",
+    "\n",
     "    def __str__(self):\n",
     "        return f'Account owner:   {self.owner}\\nAccount balance: ${self.balance}'\n",
-    "        \n",
-    "    def deposit(self,dep_amt):\n",
+    "\n",
+    "    def deposit(self, dep_amt):\n",
     "        self.balance += dep_amt\n",
     "        print('Deposit Accepted')\n",
-    "        \n",
-    "    def withdraw(self,wd_amt):\n",
+    "\n",
+    "    def withdraw(self, wd_amt):\n",
     "        if self.balance >= wd_amt:\n",
     "            self.balance -= wd_amt\n",
     "            print('Withdrawal Accepted')\n",
@@ -195,7 +195,49 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.1"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
