--- a/00-Python Object and Data Structure Basics/08-Files.ipynb
+++ b/00-Python Object and Data Structure Basics/08-Files.ipynb
@@ -38,7 +38,7 @@
    "source": [
     "## Python Opening a file\n",
     "\n",
-    "Let's being by opening the file test.txt that is located in the same directory as this notebook. For now we will work with files located in the same directory as the notebook or .py script you are using.\n",
+    "Let's begin by opening the file test.txt that is located in the same directory as this notebook. For now we will work with files located in the same directory as the notebook or .py script you are using.\n",
     "\n",
     "It is very easy to get an error on this step:"
    ]
