Update 05-OOP Challenge - Solution.ipynb
Fix __str__ formatted output.

--- a/05-Object Oriented Programming/05-OOP Challenge - Solution.ipynb
+++ b/05-Object Oriented Programming/05-OOP Challenge - Solution.ipynb
@@ -33,7 +33,7 @@
     "        self.balance = balance\n",
     "        \n",
     "    def __str__(self):\n",
-    "        return f'Account owner:   {self.owner}\\nAccount balance: ${self.balance}'\n",
+    "        return 'Account owner:   {self.owner}\\nAccount balance: ${self.balance}'.format(self=self)\n",
     "        \n",
     "    def deposit(self,dep_amt):\n",
     "        self.balance += dep_amt\n",
