--- a/02-Python Statements/07-Statements Assessment Test.ipynb
+++ b/02-Python Statements/07-Statements Assessment Test.ipynb
@@ -33,7 +33,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Code here"
+    "st = "Print only the words that start with s in this sentence"
+for s_word in st.split():
+    if s_word[0] =="s":
+        print(s_word)"
    ]
   },
   {
