Improved the __str__ method
Added comments to show the string literal version

--- a/04-OOP Challenge.ipynb
+++ b/04-OOP Challenge.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,14 +44,19 @@
     "        else:\n",
     "            print(\"Funds Unavailable!\")\n",
     "        \n",
-    "    def __str__(self):\n",
-    "        return \"Account owner: {}. Account balance: €{}\".format(\n",
-    "                                        self.owner, self.balance)"
+    "    def __str__(self):        \n",
+    "#       note: the way \\n is used\n",
+    "\n",
+    "#       str literal version:\n",
+    "#       retrun f\"Owner: {self.owner} \\nBalance: {self.balance}\n",
+    "        return \"Owner: {} \\nBalance: €{}\".format(\n",
+    "                                        self.owner, self.balance)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,14 +66,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Account owner: Jose. Account balance: €100\n"
+      "Account owner: Jose \n",
+      "Account balance: €100\n"
      ]
     }
    ],
