--- a/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
+++ b/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
@@ -421,7 +421,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What will be the resulting Boolean of the following pieces of code (answer fist then check by typing it in!)"
+    "What will be the resulting Boolean of the following pieces of code (answer first then check by typing it in!)"
    ]
   },
   {
