Minor Change in Lists.ipynb

--- a/00-Python Object and Data Structure Basics/04-Lists.ipynb
+++ b/00-Python Object and Data Structure Basics/04-Lists.ipynb
@@ -594,7 +594,7 @@
    "metadata": {},
    "source": [
     "## Nesting Lists\n",
-    "A great feature of of Python data structures is that they support *nesting*. This means we can have data structures within data structures. For example: A list inside a list.\n",
+    "A great feature of Python data structures is that they support *nesting*. This means we can have data structures within data structures. For example: A list inside a list.\n",
     "\n",
     "Let's see how this works!"
    ]
