--- a/00-Python Object and Data Structure Basics/08-Files.ipynb
+++ b/00-Python Object and Data Structure Basics/08-Files.ipynb
@@ -528,7 +528,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll learn a lot more about this later, but up next: Sets and Booleans!"
+    "We'll learn a lot more about this later."
    ]
   }
  ],
