Update 09-Objects and Data Structures Assessment Test.ipynb

--- a/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
+++ b/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
@@ -31,15 +31,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Numbers:\n",
+    "Numbers: Numerical information which is either whole number or floating point number\n",
     "\n",
-    "Strings:\n",
+    "Strings: ordered sequence of charecters\n",
     "\n",
-    "Lists:\n",
+    "Lists: ordered sequence of values which can be of any type\n",
     "\n",
-    "Tuples:\n",
+    "Tuples: same as list but immutable\n",
     "\n",
-    "Dictionaries:\n"
+    "Dictionaries: key value pair of values which is unordered\n"
    ]
   },
   {
@@ -67,10 +67,10 @@
     "Answer these 3 questions without typing code. Then type code to check your answer.\n",
     "\n",
     "    What is the value of the expression 4 * (6 + 5)\n",
-    "    \n",
+    "    44\n",
     "    What is the value of the expression 4 * 6 + 5 \n",
-    "    \n",
-    "    What is the value of the expression 4 + 6 * 5 "
+    "    29\n",
+    "    What is the value of the expression 4 + 6 * 5 34"
    ]
   },
   {
@@ -84,7 +84,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What is the *type* of the result of the expression 3 + 1.5 + 4?<br><br>"
+    "What is the *type* of the result of the expression 3 + 1.5 + 4? float <br><br>"
    ]
   },
   {
@@ -133,7 +133,7 @@
    "outputs": [],
    "source": [
     "s = 'hello'\n",
-    "# Print out 'e' using indexing\n",
+    "print (s[1])\n",
     "\n"
    ]
   },
@@ -151,7 +151,7 @@
    "outputs": [],
    "source": [
     "s ='hello'\n",
-    "# Reverse the string using slicing\n",
+    "s[::-1]\n",
     "\n"
    ]
   },
@@ -171,7 +171,7 @@
     "s ='hello'\n",
     "# Print out the 'o'\n",
     "\n",
-    "# Method 1:\n",
+    "print (s[4])\n",
     "\n"
    ]
   },
@@ -181,7 +181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Method 2:\n",
+    "print (s[-1])",
     "\n"
    ]
   },
