--- a/02-Python Statements/07_Statements_Assessment_Test_checkpoint.ipynb
+++ b/02-Python Statements/07_Statements_Assessment_Test_checkpoint.ipynb
@@ -78,10 +78,10 @@
       "metadata": {
         "id": "IOrrA-sR6wCl",
         "colab_type": "code",
-        "outputId": "e1884423-261f-472c-8549-8eb338b206bf",
+        "outputId": "c12f5066-c3ca-41b5-dbfa-e8271bda3858",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 85
+          "height": 68
         }
       },
       "source": [
@@ -90,12 +90,11 @@
         "    if word[0].lower()=='s': ##keep case is mind\n",
         "        print(word)"
       ],
-      "execution_count": 18,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Sam\n",
             "start\n",
             "s\n",
             "sentence\n"
@@ -120,7 +119,7 @@
       "metadata": {
         "id": "NjNfI4zm6wCq",
         "colab_type": "code",
-        "outputId": "8cfeda4b-9657-4416-c969-8afe2f1d4658",
+        "outputId": "a6425a14-b290-4a47-9bcb-568aa4958f56",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -130,7 +129,7 @@
         "#Code Here\n",
         "print([x for x in range(1,11) if x%2==0])"
       ],
-      "execution_count": 23,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -157,7 +156,7 @@
       "metadata": {
         "id": "4WIq0jVY6wCu",
         "colab_type": "code",
-        "outputId": "8c297322-a865-477f-aba8-86b2c275c5bc",
+        "outputId": "c7024ac1-419d-4a30-bd07-ef6faf970d39",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -167,7 +166,7 @@
         "#Code in this cell\n",
         "[x for x in range (1,50) if x%3==0]"
       ],
-      "execution_count": 15,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -179,7 +178,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 4
         }
       ]
     },
@@ -212,10 +211,10 @@
       "metadata": {
         "id": "DXijWmDS6wC6",
         "colab_type": "code",
-        "outputId": "ba67f91b-7014-48ca-cafd-5fbc5c2120c7",
+        "outputId": "50c5b272-6813-4f36-8ca5-08768c1638d9",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 119
+          "height": 170
         }
       },
       "source": [
@@ -225,17 +224,20 @@
         "    if len(word)%2==0:\n",
         "        print(word+' even')"
       ],
-      "execution_count": 21,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "only even\n",
-            "that even\n",
-            "with even\n",
+            "word even\n",
             "in even\n",
             "this even\n",
-            "sentence even\n"
+            "sentence even\n",
+            "that even\n",
+            "an even\n",
+            "even even\n",
+            "number even\n",
+            "of even\n"
           ],
           "name": "stdout"
         }
@@ -257,11 +259,11 @@
       "metadata": {
         "id": "FaoluFIB6wDB",
         "colab_type": "code",
+        "outputId": "5597715c-2501-4d63-f8cc-6a55bd1d82a5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "18c9ad26-dc35-4a87-bf3f-e1a9e8e2ac6a"
+        }
       },
       "source": [
         "#Code in this cell\n",
@@ -275,7 +277,7 @@
         "    else:\n",
         "        print(num)"
       ],
-      "execution_count": 22,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -414,17 +416,17 @@
       "metadata": {
         "id": "MmLAuv0z6wDL",
         "colab_type": "code",
+        "outputId": "561c250e-8080-4656-de12-527c9418b0df",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "2c806a96-959e-4f34-e818-93c5f0d3a8ed"
+        }
       },
       "source": [
         "#Code in this cell\n",
         "[every_letter[0] for every_letter in st.split() ]\n"
       ],
-      "execution_count": 11,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -436,7 +438,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 9
         }
       ]
     },
