Remove duplicate section on Variable Assignment

--- a/00-Python Object and Data Structure Basics/01-Numbers.ipynb
+++ b/00-Python Object and Data Structure Basics/01-Numbers.ipynb
@@ -12,8 +12,7 @@
     "\n",
     "    1.) Types of Numbers in Python\n",
     "    2.) Basic Arithmetic\n",
-    "    3.) Differences between classic division and floor division\n",
-    "    4.) Object Assignment in Python"
+    "    3.) Differences between classic division and floor division"
    ]
   },
   {
@@ -315,208 +314,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Variable Assignments\n",
+    "So what have we learned? We learned some of the basics of numbers in Python. We also learned how to do arithmetic and use Python as a basic calculator.\n",
     "\n",
-    "Now that we've seen how to use numbers in Python as a calculator let's see how we can assign names and create variables.\n",
-    "\n",
-    "We use a single equals sign to assign labels to variables. Let's see a few examples of how we can do this."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Let's create an object called \"a\" and assign it the number 5\n",
-    "a = 5"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now if I call *a* in my Python script, Python will treat it as the number 5."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Adding the objects\n",
-    "a+a"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "What happens on reassignment? Will Python let us write it over?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Reassignment\n",
-    "a = 10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Check\n",
-    "a"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Yes! Python allows you to write over assigned variable names. We can also use the variables themselves when doing the reassignment. Here is an example of what I mean:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Check\n",
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Use A to redefine A\n",
-    "a = a + a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "20"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Check \n",
-    "a"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The names you use when creating these labels need to follow a few rules:\n",
-    "\n",
-    "    1. Names can not start with a number.\n",
-    "    2. There can be no spaces in the name, use _ instead.\n",
-    "    3. Can't use any of these symbols :'\",<>/?|\\()!@#$%^&*~-+\n",
-    "    4. It's considered best practice (PEP8) that names are lowercase.\n",
-    "    5. Avoid using the characters 'l' (lowercase letter el), 'O' (uppercase letter oh), \n",
-    "       or 'I' (uppercase letter eye) as single character variable names.\n",
-    "    6. Avoid using words that have special meaning in Python like \"list\" and \"str\"\n",
-    "\n",
-    "\n",
-    "Using variable names can be a very useful way to keep track of different variables in Python. For example:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Use object names to keep better track of what's going on in your code!\n",
-    "my_income = 100\n",
-    "\n",
-    "tax_rate = 0.1\n",
-    "\n",
-    "my_taxes = my_income*tax_rate"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10.0"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Show my taxes!\n",
-    "my_taxes"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "So what have we learned? We learned some of the basics of numbers in Python. We also learned how to do arithmetic and use Python as a basic calculator. We then wrapped it up with learning about Variable Assignment in Python.\n",
-    "\n",
-    "Up next we'll learn about Strings!"
+    "Up next we'll learn about variable assignment!"
    ]
   }
  ],
