Update 09-Objects and Data Structures Assessment Test.ipynb

--- a/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
+++ b/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "## Test your knowledge. \n",
     "\n",
-    "** Answer the following questions **"
+    "** aAnswer the following questions **"
    ]
   },
   {
