Updated allowable characters for variable names
There's a wider universe of characters which you can't use in a variable name, apart from what was mentioned before. So it's far easier to understand what you can use instead.

--- a/00-Python Object and Data Structure Basics/01-Numbers.ipynb
+++ b/00-Python Object and Data Structure Basics/01-Numbers.ipynb
@@ -465,7 +465,7 @@
     "\n",
     "    1. Names can not start with a number.\n",
     "    2. There can be no spaces in the name, use _ instead.\n",
-    "    3. Can't use any of these symbols :'\",<>/?|\\()!@#$%^&*~-+\n",
+    "    3. You can only use alpha-numeric characters and underscores (A-z, 0-9, and _ ),
     "    4. It's considered best practice (PEP8) that names are lowercase.\n",
     "    5. Avoid using the characters 'l' (lowercase letter el), 'O' (uppercase letter oh), \n",
     "       or 'I' (uppercase letter eye) as single character variable names.\n",
